--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -23,4 +23,15 @@
         <servlet-name>allUsers</servlet-name>
         <url-pattern>/users/all</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>registration</servlet-name>
+        <servlet-class>mate.academy.internetshop.controllers.RegistrationController</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>registration</servlet-name>
+        <url-pattern>/registration</url-pattern>
+    </servlet-mapping>
+
 </web-app>
