--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -16,7 +16,7 @@
 
     <servlet>
         <servlet-name>allUsers</servlet-name>
-        <servlet-class>mate.academy.internetshop.controllers.UsersViewController</servlet-class>
+        <servlet-class>mate.academy.internetshop.controllers.ViewUsersController</servlet-class>
     </servlet>
 
     <servlet-mapping>
